# information_search_MAI

history_search_engine/: config.yaml  docker-compose.yml
history_search_engine/crawler/: Cargo.toml  Dockerfile  config.yaml
history_search_engine/crawler/src/: config.rs  crawler.rs  database.rs  document.rs  html_parser.rs  main.rs
history_search_engine/engine/: CMakeLists.txt  Dockerfile
history_search_engine/engine/src/: boolean_search.cpp  boolean_search.h  hash_table.h  inverted_index.cpp  inverted_index.h  json_reader.cpp  json_reader.h  main.cpp  mongo_reader.cpp  mongo_reader.h  stemmer.cpp  stemmer.h  tokenizer.cpp  tokenizer.h  zipf_analyzer.cpp  zipf_analyzer.h
history_search_engine/report/: report.tex
history_search_engine/visualization/: Dockerfile  plot_zipf.py  requirements.txt
history_search_engine/web/: app.py
history_search_engine/web/templates/: index.html
